--- a/src/components/skills.css
+++ b/src/components/skills.css
@@ -21,6 +21,17 @@
     margin: 60px;
     margin-bottom: 100px;
   }
+
+  .Tools img {
+    filter: grayscale(70%);
+    transition: filter 0.3s ease-in-out;
+  }
+  
+  .Tools img:hover {
+    filter: grayscale(0%);
+    transition: 0.5s;
+  }
+  
   
   .Figma {
     margin-right: 75px; /* setting margin atar komponen */
@@ -69,7 +80,6 @@
     animation-fill-mode: both;
     opacity: 0.5;
     transition: opacity 0.3s;
-    /* control image size agar memiliki ukuran yang sama */
   }
   
   .Tools img.clicked {
@@ -96,6 +106,8 @@
     .Tools img {
       margin: 15px; /* margin di mobile */
       padding: 2px; /* padding di mobile */
+      height: 70px;
+      width: auto;
     }
   }
   
@@ -111,90 +123,3 @@
     opacity: 1;
     visibility: visible;
   }
-  
-/* .Skills-container{
-    padding-top: -100px;
-}
-
-.Skills{
-    text-align: center;
-}
-.Skills h4{
-    color: white;
-    padding-top: 100px;
-    
-}
-
-.Skills h1{
-    color: #DB7212;
-    font-size: 40px;
-}
-
-.Tools{
-    text-align: center;
-    margin: 60px;
-    margin-bottom: 100px;
-    
-}
-
-.Figma{
-    margin-right: 55px;
-}
-
-.Canva{
-    margin-right: 55px;
-}
-
-.Html{
-    margin-right: 55px;
-}
-
-.Css{
-    margin-right: 55px;
-}
-.Js{
-    margin-right: 55px;
-}
-
-@keyframes fadeIn {
-    0% {
-        opacity: 0;
-        transform: scale(0);
-    }
-    100% {
-        opacity: 1;
-        transform: scale(1);
-    }
-}
-
-@keyframes fadeOut {
-    0% {
-        opacity: 1;
-        transform: scale(1);
-    }
-    100% {
-        opacity: 0;
-        transform: scale(0);
-    }
-}
-
-.Tools img {
-    animation-duration: 0.5s;
-    animation-fill-mode: both;
-    opacity: 0.3; 
-    transition: opacity 0.3s;
-}
-
-.Tools img.clicked {
-    animation-name: fadeOut;
-}
-
-.Tools img:hover {
-    opacity: 50; 
-    transform: scale(1.1);
-  }
-
-.Tools img.clicked.show {
-    animation-name: fadeIn;
-    transition: transform 0.5s ease-out;
-} */
