--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,3 +1,11 @@
+.nav-link {
+  font-size: 16px;
+  color: #ffffff;
+  text-decoration: none;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+
 .navbar-toggler-icon {
   display: block;
   width: 24px;
