--- a/src/components/Aboutme.css
+++ b/src/components/Aboutme.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Montserrat:wght@100;300;400&family=Poppins:ital,wght@0,300;0,400;0,500;1,600&family=Rancho&display=swap');
+
 .About-container {
   display: flex;
 }
@@ -17,25 +19,28 @@
 .Kanan {
   width: 37%;
   color: white;
-  font-family: "Montserrat", sans-serif;
   margin-right: 5rem;
   display: flex;
   flex-direction: column;
-  margin-top: 305px;
+  margin-top: 250px;
+  font-family: "roboto",sans-serif;
 }
 
 
 .Kanan h1 {
   letter-spacing: 1.5px;
   font-size: 35px;
+  font-weight: 600;
+  font-family: ddin-bold;
 }
 
 .Kanan p {
-  font-size: 1rem;
   margin-top: 2rem;
   margin-bottom: 1rem;
   color: #b5b5b5;
   text-align: left;
+  font-family: roboto;
+  line-height: 30px
 }
 
 .Contact-item {
@@ -112,7 +117,7 @@
 
   .Kanan {
     width: 90%;
-    margin-top: 2rem;
+    margin-top: -30px;
     display: flex;
     flex-direction: column;
     position: static;
@@ -123,12 +128,14 @@
   .Kanan h1 {
     font-size: 1.8rem;
     letter-spacing: normal!important;
+    font-size: 50px;
   }
 
   .Kanan p {
     font-size: 0.9rem;
     margin-top: 1rem;
     margin-bottom: 1.5rem;
+    font-size: 17px;
   }
 
   .Contact-item{
