--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: ddin-bold;
+  src: url(/public/D-DIN-Bold.ttf);
+}
+
 .nav-link {
   font-size: 16px;
   color: #ffffff;
@@ -57,6 +62,8 @@
   padding: 0;
   display: flex;
   justify-content: flex-end;
+  font-family: ddin-bold;
+  font-weight: 600;
 }
 
 .nav-item {
@@ -85,7 +92,10 @@
     padding-left: 1rem;
   }
 
-  /* Additional CSS for vertical alignment */
+  .navbar-brand img{
+    width: 18 0px;
+    height: auto;
+  }
   .navbar-nav {
     display: flex;
     flex-direction: column;
@@ -106,6 +116,7 @@
     left: 0;
     width: 100%;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    text-align: center
   }
 
   .navbar-collapse.show .nav-item {
