--- a/src/components/portfolio.css
+++ b/src/components/portfolio.css
@@ -1,5 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap");
 
+@font-face {
+  font-family: ddin-bold;
+  src: url(/public/D-DIN-Bold.ttf);
+}
+
 .Mockup {
   position: relative;
   margin-left: 750px;
@@ -20,11 +25,13 @@
 .Work h4 {
   color: white;
   padding-top: 100px;
+  font-family: ddin-bold;
 }
 
 .Work h1 {
   color: #db7212;
   font-size: 40px;
+  font-family: ddin-bold;
 }
 
 .Detail {
@@ -35,17 +42,20 @@
   color: #db7212;
 }
 
+
 .Detail h1 {
-  padding-top: 20px;
+  padding-top: 10px;
   letter-spacing: 1.25px;
   font-size: 30px;
   color: white;
+  font-family: ddin-bold;
 }
 
 .Detail p {
   padding-top: 20px;
-  font-size: 20px;
+  font-size: 16px;
   color: #b5b5b5;
+  line-height: 27px;
 }
 
 .Detail button {
@@ -75,22 +85,32 @@
 }
 
 .Mockup img:hover {
-  transform: scale(1.1);
+  opacity: 0.8;
+}
+
+.visit-web a{
+color: #323232;
 }
 
 @media screen and (max-width: 768px) {
   .Portfolio-container {
-    padding-bottom: 100px;
+    padding-bottom: 1rem;
     margin: 0;
-    padding: 0;
   }
 
   .Work h4 {
     padding-top: 50px;
+    padding-top: 20px;
+    text-align: start;
+    padding-left: 1rem;
+    font-size: 20px;
   }
 
   .Work h1 {
     font-size: 28px;
+    font-size: 60px;
+    text-align: start;
+    padding-left: 0.8rem;
   }
 
   .Detail {
@@ -100,13 +120,23 @@
     text-align: center;
   }
 
+  .Detail h2{
+  text-align: start;
+  padding-left: 1rem;
+  }
+
   .Detail h1 {
-    padding-top: 10px;
     font-size: 24px;
+    text-align: start;
+    padding-left: 1rem;
+    width: 90%;
   }
 
   .Detail p {
     font-size: 16px;
+    text-align: start;
+    padding-left: 1rem;
+    width: 90%;
   }
 
   .Detail img {
@@ -119,6 +149,10 @@
     opacity: 0.1;
   }
 
+  .Detail button{
+    display: none;
+  }
+
   .Mockup {
     margin: 50px auto;
     text-align: center;
@@ -128,4 +162,15 @@
     width: 90%;
     height: 100%;
   }
+
+  .visit-web{
+    text-align: start;
+    padding-left: 1.5rem;
+  }
+
+  .visit-web a{
+    color: #fff;
+    font-size: 12px;
+  }
+
 }
