--- a/src/components/skills.css
+++ b/src/components/skills.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: ddin-bold;
+  src: url(/public/D-DIN-Bold.ttf);
+}
+
 .Skills-container {
     padding-top: -100px;
   }
@@ -9,11 +14,13 @@
   .Skills h4 {
     color: white;
     padding-top: 100px;
+    font-family: ddin-bold;
   }
   
   .Skills h1 {
     color: #db7212;
     font-size: 40px;
+    font-family: ddin-bold;
   }
   
   .Tools {
